<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/tools"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/item_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/md_white_1000"
        android:clickable="true"
        android:elevation="5dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:ignore="NamespaceTypo"
        card_view:cardCornerRadius="4dp"
        card_view:cardUseCompatPadding="true">

        <!--   Recycler View Item Row   -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:weightSum="8">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="1.4"
                    android:layout_marginLeft="8dp"
                    android:padding="4dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/listIcon"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:scaleType="centerInside"
                        android:background="@drawable/red_circle_border"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_action_adjust" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="6.6"
                    android:padding="4dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".5"
                            android:text="@string/meter_name"
                            android:layout_gravity="center"
                            android:gravity="center|left"
                            android:drawableLeft="@drawable/electricity"
                            android:drawablePadding="4dp"
                            android:id="@+id/meterName"
                            android:textColor="@color/md_grey_800"
                            android:textSize="14sp"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".5"
                            android:ellipsize="end"
                            android:id="@+id/roomName"
                            android:drawableLeft="@drawable/ic_action_owner"
                            android:drawablePadding="4dp"
                            android:text="@string/room_name"
                            android:layout_gravity="center"
                            android:gravity="center|left"
                            android:scrollHorizontally="true"
                            android:textColor="@color/md_grey_800"
                            android:textSize="14sp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/meter_type"
                            android:id="@+id/meterType"
                            android:layout_gravity="center"
                            android:gravity="center|left"
                            android:drawableLeft="@drawable/ic_action_meter_unit"
                            android:drawablePadding="4dp"
                            android:textColor="@color/md_blue_800"
                            android:textSize="14sp"/>
                    </LinearLayout>


                </LinearLayout>


            </LinearLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>