<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_gradient_back"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".activities.onboard.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/app_bar">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tool_bar"
            app:navigationIcon="?attr/homeAsUpIndicator"
            style="@style/TextAppearance.Widget.Event.Toolbar.Title"
            app:title="@string/app_name"
            app:titleTextColor="@color/md_grey_800">

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/app_bar">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:background="@drawable/room_cardview_gradient"
            app:cardCornerRadius="24dp"
            android:translationZ="4dp"
            android:id="@+id/roomDashboardCard"
            android:clickable="true"
            android:layout_marginTop="12dp"
            app:cardUseCompatPadding="true"
            app:elevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/room_cardview_gradient"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="16dp"
                    android:weightSum="2.5">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".4"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_margin="8dp"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="46dp"
                            android:layout_height="41dp"
                            android:layout_gravity="center"
                            android:layout_margin="4dp"
                            android:src="@drawable/house"
                            app:fabSize="normal" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.7"
                        android:orientation="vertical"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:weightSum="2">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:textSize="18sp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:padding="4dp"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:text="@string/no_of_rooms"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:layout_weight="1"
                            android:textSize="18sp"
                            android:padding="4dp"
                            android:text="@string/total_earnings"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_margin="8dp"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/mAddMasterRoom"
                            android:layout_width="42dp"
                            android:layout_height="42dp"
                            android:layout_margin="4dp"
                            android:layout_gravity="center"
                            android:src="@drawable/add"
                            app:fabSize="normal" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:background="@drawable/room_cardview_gradient"
            app:cardCornerRadius="24dp"
            android:translationZ="4dp"
            android:id="@+id/meterDashboardCard"
            android:clickable="true"
            android:layout_marginTop="12dp"
            app:cardUseCompatPadding="true"
            app:elevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/electricity_bill_gradient"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16sp"
                    android:weightSum="2.5"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".4"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_margin="8dp"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="46dp"
                            android:layout_height="46dp"
                            android:layout_margin="4dp"
                            android:layout_gravity="center"
                            android:src="@drawable/lightbulb"
                            app:fabSize="normal" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.7"
                        android:orientation="vertical"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:weightSum="2">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:textSize="18sp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:padding="4dp"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:text="@string/no_of_meters"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:layout_weight="1"
                            android:textSize="18sp"
                            android:padding="4dp"
                            android:text="@string/total_unit"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_margin="8dp"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/mAddMasterElectricityBill"
                            android:layout_width="42dp"
                            android:layout_height="42dp"
                            android:layout_margin="4dp"
                            android:layout_gravity="center"
                            android:src="@drawable/add"
                            app:fabSize="normal" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</RelativeLayout>